--- a/vci.ipynb
+++ b/vci.ipynb
@@ -2,16 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting openpyxl\n",
+      "  Downloading openpyxl-3.1.2-py2.py3-none-any.whl (249 kB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m250.0/250.0 kB\u001b[0m \u001b[31m189.8 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m[36m0:00:01\u001b[0m[36m0:00:01\u001b[0m:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: et-xmlfile in /home/yoda/anaconda3/envs/vizn/lib/python3.8/site-packages (from openpyxl) (1.1.0)\n",
+      "Installing collected packages: openpyxl\n",
+      "Successfully installed openpyxl-3.1.2\n"
+     ]
+    }
+   ],
    "source": [
     "!pip3 install openpyxl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,51 +36,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# if os.path.exists(\"vci.xlsx\"):\n",
+    "#     vci_data = pd.read_excel(\"vci.xlsx\", sheet_name=\"TMH 18.vcf\")\n",
+    "# else:\n",
+    "#     print(\"DATA NOT FOUND\")\n",
+    "\n",
     "if os.path.exists(\"vci.xlsx\"):\n",
-    "    vci_data = pd.read_excel(\"vci.xlsx\", sheet_name=\"TMH 18.vcf\")\n",
+    "    workbook = openpyxl.load_workbook('vcifinal.xlsx')\n",
+    "\n",
+    "    # Select the desired worksheet\n",
+    "    worksheet = workbook['Sheet1']\n",
+    "\n",
+    "    # # Insert a new column at a specific index (e.g., column D)\n",
+    "    #VCI_COND\n",
+    "    column_index = 10\n",
+    "    worksheet.insert_cols(column_index)\n",
+    "    # Write data to the newly inserted column\n",
+    "    column_header = 'VCI_COND'\n",
+    "    column_data = ['']  \n",
+    "    # Set the column header\n",
+    "    worksheet.cell(row=1, column=column_index, value=column_header)\n",
+    "\n",
+    "    #SCI\n",
+    "    column_index = 11\n",
+    "    worksheet.insert_cols(column_index)\n",
+    "    # Write data to the newly inserted column\n",
+    "    column_header = 'SCI'\n",
+    "    column_data = ['']  \n",
+    "    # Set the column header\n",
+    "    worksheet.cell(row=1, column=column_index, value=column_header)\n",
+    "\n",
+    "    #SCI_COND\n",
+    "    column_index = 12\n",
+    "    worksheet.insert_cols(column_index)\n",
+    "    # Write data to the newly inserted column\n",
+    "    column_header = 'SCI_COND'\n",
+    "    column_data = ['']  \n",
+    "    # Set the column header\n",
+    "    worksheet.cell(row=1, column=column_index, value=column_header)\n",
+    "\n",
+    "    #STCI\n",
+    "    column_index = 13\n",
+    "    worksheet.insert_cols(column_index)\n",
+    "    # Write data to the newly inserted column\n",
+    "    column_header = 'STCI'\n",
+    "    column_data = ['']  \n",
+    "    # Set the column header\n",
+    "    worksheet.cell(row=1, column=column_index, value=column_header)\n",
+    "\n",
+    "    #STCI_COND\n",
+    "    column_index = 14\n",
+    "    worksheet.insert_cols(column_index)\n",
+    "    # Write data to the newly inserted column\n",
+    "    column_header = 'STCI_COND'\n",
+    "    column_data = ['']  \n",
+    "    # Set the column header\n",
+    "    worksheet.cell(row=1, column=column_index, value=column_header)\n",
+    "\n",
+    "    # Set the column data\n",
+    "\n",
+    "    for row, data in enumerate(column_data, start=2):\n",
+    "        worksheet.cell(row=row, column=column_index, value=data)\n",
+    "\n",
+    "    # Save the modified workbook\n",
+    "\n",
+    "    workbook.save('vci_modified.xlsx')\n",
+    "\n",
     "else:\n",
-    "    print(\"DATA NOT FOUND\")\n",
-    "\n",
-    "\n",
-    "if\n",
-    " os.path.exists(\n",
-    "\"vci.xlsx\"\n",
-    "):\n",
-    "    excel_file = pd.ExcelFile(\n",
-    "\"vci.xlsx\"\n",
-    ")\n",
-    "    sheet_name = \n",
-    "\"TMH 18.vcf\"\n",
-    "\n",
-    "\n",
-    "    \n",
-    "if\n",
-    " sheet_name \n",
-    "in\n",
-    " excel_file.sheet_names:\n",
-    "        vci_data = pd.read_excel(excel_file, sheet_name=sheet_name)\n",
-    "        \n",
-    "# Process the data as needed\n",
-    "\n",
-    "    \n",
-    "else\n",
-    ":\n",
-    "        \n",
-    "print\n",
-    "(\n",
-    "\"Sheet name not found in the Excel file.\"\n",
-    ")\n",
-    "else\n",
-    ":\n",
-    "    \n",
-    "print\n",
-    "(\n",
-    "\"Excel file not found.\"\n",
-    ")\n"
+    "    print(\"DATA NOT FOUND\")    "
    ]
   },
   {
@@ -91,6 +131,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -194,6 +235,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -362,6 +404,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
